[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/Enemies/Bandit/Bandit.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Enemies/Slugs/AoeShooter/AoeShooterSheet.png" type="Texture" id=2]
[ext_resource path="res://Entities/Enemies/Slugs/AoeShooter/Gun.gd" type="Script" id=3]
[ext_resource path="res://Entities/Enemies/Slugs/AoeShooter/AoeShooter.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float isOn = 1.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	vec4 flash = vec4(
		mix(color.r, 1, isOn),
		mix(color.g, 1, isOn),
		mix(color.b, 1, isOn),
		color.a
	);
	COLOR = flash;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/isOn = 0.0

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[sub_resource type="Animation" id=5]
resource_name = "Fall"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[node name="Bandit" instance=ExtResource( 1 )]

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 2 )
offset = Vector2( 2, -6 )
hframes = 3
frame = 0

[node name="Gun" parent="." index="1"]
show_behind_parent = true
position = Vector2( 0, -8 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Gun" index="0"]
material = SubResource( 2 )
texture = ExtResource( 4 )
offset = Vector2( 7, 0 )

[node name="Cooldown" type="Timer" parent="Gun" index="1"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="Gun" index="2"]
one_shot = true

[node name="BarrelEnd" type="Position2D" parent="Gun" index="3"]

[node name="CollisionShape2D" parent="." index="2"]
visible = true
position = Vector2( 0, -3 )

[node name="DamageManager" parent="." index="3"]
maxHealth = 1100

[node name="Collisions" parent="." index="4"]
visible = false

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 6 )

[node name="AnimationPlayer" parent="." index="6"]
anims/Fall = SubResource( 5 )
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[connection signal="timeout" from="Gun/Cooldown" to="Gun" method="shoot"]
[connection signal="timeout" from="Gun/AttackTimer" to="Gun" method="_on_attack_timer_timeout"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/PlayerDetection"]
